src/rules/snapshots/pg_migration_lint__rules__pgm103__tests__char_fires.snap
---
source: src/rules/pgm103.rs
assertion_line: 110
expression: findings
---
- rule_id: PGM103
  severity: Minor
  message: "Column 'code' on 'countries' uses 'char'. The char(n) type pads with spaces, wastes storage, and is no faster than text or varchar in PostgreSQL. Use text or varchar instead."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
